--- a/views/layout.jade
+++ b/views/layout.jade
@@ -39,7 +39,7 @@ html(lang='en')
     nav.navbar.navbar-default.navbar-fixed-top
       .container
         .navbar-header
-          a.navbar-brand(href='/messages') Messages
+          a.navbar-brand(href='/dashboard') Call tracking
 
     //- Include page content
     #main.container
