--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
   head
-    title= title || 'Twilio Starter Project for Node.js and Express'
+    title= title || 'Call tracking'
 
     // Twilio shortcut icons
     link(rel='shortcut icon', 
