--- a/views/availableNumbers.jade
+++ b/views/availableNumbers.jade
@@ -15,4 +15,6 @@ block content
               td= number.friendlyName
               td= number.region
               td
-                href.btn.btn-xs.btn-default= 'Purchase'
+                form(name='purchaseNumber', action='/phone-number', method='POST')
+                    input(type='hidden', name='phoneNumber', value="#{number.phone_number}")
+                    input(type='submit', value='Purchase').btn.btn-xs.btn-default
