--- a/views/editLeadSource.jade
+++ b/views/editLeadSource.jade
@@ -6,11 +6,11 @@ block content
   h3 Lead source phone number: #{leadSourcePhoneNumber}
   div.row
     div.col-lg-4
-        form(name='editLeadSource', action="/lead-source/#{leadSourceId}/update", method='POST')
+        form(name='editLeadSource', action='/lead-source/#{leadSourceId}/update', method='POST')
             div.form-group
                 label(for='description') Description:
-                input(type='text', name='description').form-control
+                input(type='text', name='description', value='#{leadSourceDescription}').form-control
             div.form-group
                 label(for='forwardingNumber') Forwarding number:
-                input(type='text', name='forwardingNumber').form-control
-            input(type='submit', value='Save').btn.btn-primary
+                input(type='text', name='forwardingNumber', value='#{leadSourceForwardingNumber}').form-control
+            input(type='submit', value='Update').btn.btn-primary
