--- a/views/editLeadSource.jade
+++ b/views/editLeadSource.jade
@@ -8,7 +8,7 @@ block content
     div.alert.alert-danger
       ul
         each message in messages
-          li
+          li.validationError
             | #{message.msg}
 
   h3 Lead source phone number: #{leadSourcePhoneNumber}
@@ -17,8 +17,8 @@ block content
         form(name='editLeadSource', action='/lead-source/#{leadSourceId}/update', method='POST')
             div.form-group
                 label(for='description') Description:
-                input(type='text', name='description', value=leadSourceDescription).form-control
+                input(type='text', name='description', value=leadSourceDescription).form-control#description
             div.form-group
                 label(for='forwardingNumber') Forwarding number:
-                input(type='text', name='forwardingNumber', value=leadSourceForwardingNumber).form-control
+                input(type='text', name='forwardingNumber', value=leadSourceForwardingNumber).form-control#forwardingNumber
             input(type='submit', value='Update').btn.btn-primary
