--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -42,3 +42,8 @@ block content
       h3 Calls by city
       p The number of incoming calls from different cities, based on Twilio call data
       canvas#pie-by-city
+
+block scripts
+  script(src='//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js')
+  script(src='//cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js')
+  script(src='js/pieCharts.js')
