Add lead source listing test

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -16,7 +16,7 @@ block content
       hr
       h3 Lead sources
       a.btn.btn-sm.btn-default(href='https://www.twilio.com/user/account/apps/' + '#{appSid}') App configuration
-      table.table
+      table.table#leadSources
         thead
           tr
             th Phone number
