Minor formatting fixes

--- a/tutorial/index.jade
+++ b/tutorial/index.jade
@@ -123,6 +123,7 @@
       Ad" or "Dancing guy with sign"). It also tracks a phone number
       to which we'd like all the calls redirected, like your sales or
       support help line.
+
       ---
 
       **See also:**
@@ -177,7 +178,9 @@
 
       One useful statistic we can get from our data is how many calls
       each `LeadSource` has received. We might also want to know the
-      cities the leads are coming from. For this we define two functions.
+      cities the leads are coming from. For this we define two
+      functions which will be mapped to routes the frontend can call.
+
       ---
 
       **See also:**
@@ -195,6 +198,10 @@
       [jQuery](https://api.jquery.com/jquery.get/).  We display the
       stats in colorful pie charts we create with
       [Chart.js](http://www.chartjs.org/).
+
+      **See also:**
+
+      * [Underscore.js](http://underscorejs.org/)
 
   .step(data-file='index.js')
     :markdown
