--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
   head
-    title= title || 'Call tracking'
+    title= title || 'Call Tracking'
 
     // Twilio shortcut icons
     link(rel='shortcut icon', 
@@ -37,7 +37,7 @@ html(lang='en')
     nav.navbar.navbar-default.navbar-fixed-top
       .container
         .navbar-header
-          a.navbar-brand(href='/dashboard') Call tracking
+          a.navbar-brand(href='/dashboard') Call Tracking
 
     //- Include page content
     #main.container
