--- a/tutorial/index.jade
+++ b/tutorial/index.jade
@@ -3,7 +3,7 @@
     :markdown
       ## What does this thing do?
 
-      This [Express.js](http://expressjs.com/) web application shows
+      This [Express.js](//expressjs.com/) web application shows
       how you can use Twilio to track the effectiveness of different
       marketing channels.
 
@@ -19,7 +19,7 @@
 
       In this tutorial, we'll point out the key bits of code that make
       this application work.  [Check out the project README on
-      GitHub](https://github.com/twiliodeved/call-tracking-node) to
+      GitHub](//github.com/twiliodeved/call-tracking-node) to
       see how to run the code yourself.
 
       Let's get started! Click the right arrow above to advance to the next
@@ -29,12 +29,12 @@
 
       **See also:**
 
-      * [Twilio Node Helper Library](http://twilio.github.io/twilio-node/)
-      * [Twilio REST API docs](https://www.twilio.com/docs/api)
-      * [Getting started with Express.js](http://expressjs.com/starter/installing.html)
-      * [Getting started with MongoDB](http://docs.mongodb.org/manual/)
-      * [Mongoose quickstart](http://mongoosejs.com/docs/index.html)
-      * [What is Call Tracking?](http://www.searchenginejournal.com/seo-beginner-guide-call-tracking-care/83173/)
+      * [Twilio Node Helper Library](//twilio.github.io/twilio-node/)
+      * [Twilio REST API docs](//www.twilio.com/docs/api)
+      * [Getting started with Express.js](//expressjs.com/starter/installing.html)
+      * [Getting started with MongoDB](//docs.mongodb.org/manual/)
+      * [Mongoose quickstart](//mongoosejs.com/docs/index.html)
+      * [What is Call Tracking?](//www.searchenginejournal.com/seo-beginner-guide-call-tracking-care/83173/)
 
   .step(data-file='controllers/availableNumbers.js')
     :markdown
@@ -49,10 +49,10 @@
 
       **See also:**
 
-      * [Twilio Node Helper Library](http://twilio.github.io/twilio-node/)
-      * [Callbacks versus Promises](http://twilio.github.io/twilio-node/#callbacks)
-      * [Twilio Node examples](http://twilio.github.io/twilio-node/#moreexamples)
-      * [REST API: Available Phone Numbers](https://www.twilio.com/docs/api/rest/available-phone-numbers)
+      * [Twilio Node Helper Library](//twilio.github.io/twilio-node/)
+      * [Callbacks versus Promises](//twilio.github.io/twilio-node/#callbacks)
+      * [Twilio Node examples](//twilio.github.io/twilio-node/#moreexamples)
+      * [REST API: Available Phone Numbers](//www.twilio.com/docs/api/rest/available-phone-numbers)
 
   .step(data-file='views/availableNumbers.jade')
     :markdown
@@ -66,9 +66,9 @@
 
       **See also:**
 
-      * [Jade template engine](http://jade-lang.com/)
-      * [Jade language reference](http://jade-lang.com/reference/)
-      * [Using template engines with Express](http://expressjs.com/guide/using-template-engines.html)
+      * [Jade template engine](//jade-lang.com/)
+      * [Jade language reference](//jade-lang.com/reference/)
+      * [Using template engines with Express](//expressjs.com/guide/using-template-engines.html)
 
 
   .step(data-file='controllers/leadSources.js', data-highlight='5-25')
@@ -86,9 +86,9 @@
 
       **See also:**
 
-      * [Twilio REST API: Available Phone Numbers](https://www.twilio.com/docs/api/rest/available-phone-numbers)
-      * [Twilio Node examples](http://twilio.github.io/twilio-node/#moreexamples)
-      * [Save models with Mongoose](http://mongoosejs.com/docs/api.html#model_Model-save)
+      * [Twilio REST API: Available Phone Numbers](//www.twilio.com/docs/api/rest/available-phone-numbers)
+      * [Twilio Node examples](//twilio.github.io/twilio-node/#moreexamples)
+      * [Save models with Mongoose](//mongoosejs.com/docs/api.html#model_Model-save)
 
   .step(data-file='controllers/leadSources.js', data-highlight='42-64')
     :markdown
@@ -103,10 +103,10 @@
 
       **See also:**
 
-      * [Mongoose queries](http://mongoosejs.com/docs/queries.html)
-      * [Forms with Jade](https://github.com/jadejs/jade/blob/master/examples/form.jade)
-      * [Express.js API documentation](http://expressjs.com/api.html)
-      * [E.164 format](https://en.wikipedia.org/wiki/E.164)
+      * [Mongoose queries](//mongoosejs.com/docs/queries.html)
+      * [Forms with Jade](//github.com/jadejs/jade/blob/master/examples/form.jade)
+      * [Express.js API documentation](//expressjs.com/api.html)
+      * [E.164 format](//en.wikipedia.org/wiki/E.164)
 
   .step(data-file='models/LeadSource.js')
     :markdown
@@ -123,9 +123,9 @@
 
       **See also:**
 
-      * [Mongoose models](http://mongoosejs.com/docs/models.html)
-      * [Mongoose populate](http://mongoosejs.com/docs/populate.html)
-      * [Mongoose schema types](http://mongoosejs.com/docs/schematypes.html)
+      * [Mongoose models](//mongoosejs.com/docs/models.html)
+      * [Mongoose populate](//mongoosejs.com/docs/populate.html)
+      * [Mongoose schema types](//mongoosejs.com/docs/schematypes.html)
 
   .step(data-file='models/Lead.js')
     :markdown
@@ -135,16 +135,16 @@
       `LeadSource`. Each time somebody calls a phone number associated
       with a `LeadSource`, we'll use the `Lead` model to record some
       of the [data Twilio gives
-      us](https://www.twilio.com/docs/api/twiml/twilio_request) about
+      us](//www.twilio.com/docs/api/twiml/twilio_request) about
       their call.
 
       ---
 
       **See also:**
 
-      * [Mongoose models](http://mongoosejs.com/docs/models.html)
-      * [Mongoose populate](http://mongoosejs.com/docs/populate.html)
-      * [Mongoose schema types](http://mongoosejs.com/docs/schematypes.html)
+      * [Mongoose models](//mongoosejs.com/docs/models.html)
+      * [Mongoose populate](//mongoosejs.com/docs/populate.html)
+      * [Mongoose schema types](//mongoosejs.com/docs/schematypes.html)
 
   .step(data-file='controllers/leads.js', data-highlight='8-32')
     :markdown
@@ -156,16 +156,16 @@
 
       We use the incoming call data to create a new `Lead` for a
       `LeadSource`, then return
-      [TwiML](https://www.twilio.com/docs/api/twiml) that connects our
+      [TwiML](//www.twilio.com/docs/api/twiml) that connects our
       caller with the `forwarding_number` of our `LeadSource`.
 
       ---
 
       **See also:**
 
-      * [Twilio voice request parameters](https://www.twilio.com/docs/api/twiml/twilio_request)
-      * [TwiML basics with twilio-node](http://twilio.github.io/twilio-node/#twimlBasic)
-      * [TwiML <Dial> verb](https://www.twilio.com/docs/api/twiml/dial)
+      * [Twilio voice request parameters](//www.twilio.com/docs/api/twiml/twilio_request)
+      * [TwiML basics with twilio-node](//twilio.github.io/twilio-node/#twimlBasic)
+      * [TwiML <Dial> verb](//www.twilio.com/docs/api/twiml/dial)
 
   .step(data-file='controllers/leads.js', data-highlight='34-51')
     :markdown
@@ -180,9 +180,9 @@
 
       **See also:**
 
-      * [Mongoose population](http://mongoosejs.com/docs/populate.html)
-      * [Underscore.js](http://underscorejs.org/)
-      * [Underscore.js countBy](http://underscorejs.org/#countBy)
+      * [Mongoose population](//mongoosejs.com/docs/populate.html)
+      * [Underscore.js](//underscorejs.org/)
+      * [Underscore.js countBy](//underscorejs.org/#countBy)
 
   .step(data-file='public/js/pieCharts.js')
     :markdown
@@ -190,10 +190,10 @@
 
       Back on the home page, we fetch call tracking statistics in JSON
       from the server using
-      [jQuery](https://api.jquery.com/jquery.get/).  We display the
+      [jQuery](//api.jquery.com/jquery.get/).  We display the
       stats in colorful pie charts we create with
-      [Chart.js](http://www.chartjs.org/). We also use some utility functions
-      from [Underscore.js](http://underscorejs.org/) to munge the data from
+      [Chart.js](//www.chartjs.org/). We also use some utility functions
+      from [Underscore.js](//underscorejs.org/) to munge the data from
       our back-end.
 
   .step
@@ -207,16 +207,16 @@
       If you're a Node.js developer working with Twilio, you might also enjoy these
       tutorials:
 
-      [**Click-To-Call (Node.js)**](https://www.twilio.com/docs/howto/walkthrough/click-to-call/node/express)
+      [**Click-To-Call (Node.js)**](//www.twilio.com/docs/howto/walkthrough/click-to-call/node/express)
 
       Put a button on your web page that connects visitors to live
       support or sales people via telephone.
 
-      [**Two Factor Authentication with Authy (Node.js)**](https://www.twilio.com/docs/howto/walkthrough/two-factor-authentication/node/express)
+      [**Two Factor Authentication with Authy (Node.js)**](//www.twilio.com/docs/howto/walkthrough/two-factor-authentication/node/express)
 
       Learn to implement account verification in your web app with
       Twilio-powered Authy.
 
       Thanks for checking out this tutorial! If you have any feedback to share
-      with us, we'd love to hear it. Tweet [@twilio](https://twitter.com/twilio)
+      with us, we'd love to hear it. Tweet [@twilio](//twitter.com/twilio)
       to let us know what you think.
